# home-tidying-robot

./: .gitignore  README.md  generate_map.py  requirements.txt  run.sh  run_debug.sh
docs/: APPROACH.md
src/tidybot/: CMakeLists.txt  package.xml
src/tidybot/config/: nav2_params.yaml
src/tidybot/launch/: debug.launch.py  simulation.launch.py
src/tidybot/maps/: home_map.pgm  home_map.yaml
src/tidybot/rviz/: tidybot.rviz
src/tidybot/scripts/: ground_truth_tf.py  navigate.py
src/tidybot/urdf/: tidybot.urdf.xacro
src/tidybot/worlds/: home.sdf
